--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,6 +6,8 @@ jobs:
     docker:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
         - name: docker build 
           run: docker build -t docker.io/asomaaroufiniyaa/node-app:latest .
 
