--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,4 +23,4 @@ jobs:
         - name: docker Run
           run: |
             docker pull docker.io/asomaaroufiniyaa/node-app:latest
-            docker compose -p 1025:1025 up -d
+            docker compose up -d
