--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,5 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: docker Run
-          run: |
-            cd $GITHUB_WORKSPACE
-            docker pull docker.io/asomaaroufiniyaa/node-app:latest
-            docker compose up -d
+          run: 
+            docker run -p 1025:1025 -d docker.io/asomaaroufiniyaa/node-app:latest
