--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,24 +2,23 @@ name: my node.js app workflow
 
 on: push
 
+env:
+  docker_registery: docker.io
+  docker_image: node-app
+
 jobs:
-    docker:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v3
-        - name: docker build 
-          run: docker build -t docker.io/asomaaroufiniyaa/node-app:latest .
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-        - name: docker login
-          run: docker login --username=asomaaroufiniyaa   --password=aso20017701
+      - name: docker build
+        run: docker build -t ${{ env.docker_registery }}/${{ vars.DOCKER_USERNAME }}/${{ env.docker_image }}:latest .
 
-        - name: docker publish
-          run: docker push docker.io/asomaaroufiniyaa/node-app:latest
-    deploy:
-        needs: docker
-        runs-on: ubuntu-latest
-        steps:
-        - name: docker Run
-          run: 
-            docker run -p 1025:1025 -d docker.io/asomaaroufiniyaa/node-app:latest
+      - name: docker login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ vars.DOCKER_USERNAME }} --password-stdin
+
+      - name: docker publish
+        run: docker push ${{ env.docker_registery }}/${{ vars.DOCKER_USERNAME }}/${{ env.docker_image }}:latest
+
